# cpp-game-engine

./: .gitattributes  .gitignore  CMakeLists.txt  GameEngineFromScratch.sln  Makefile  ReadME.md  cpp-GameEngine-SDL2.sln  imgui.ini
GameEngineFromScratch/: GameEngineFromScratch.cpp  GameEngineFromScratch.vcxproj  GameEngineFromScratch.vcxproj.filters  game.cpp  game.h  main.cpp
Source/: main.cpp
Source/ECS/: ECS.h  assetmanager.cpp  assetmanager.h  component.h  entity.h  entitymanager.cpp  entitymanager.h
Source/ECS/Components/: collisionbox.h  components.h  rigidbody.h  sprite.h  tile.h  transform.h  uilabel.h
Source/Engine/: camera.cpp  camera.h  circle.cpp  circle.h  clock.cpp  clock.h  collider.cpp  collider.h  engine.cpp  engine.h  globals.cpp  globals.h  particle.cpp  particle.h  texture.cpp  texture.h  tileconfiguration.cpp  tileconfiguration.h  tilemanager.cpp  tilemanager.h  utils.cpp  utils.h  vector2d.h
configuration/: config.h  root_directory.h.in
include/: game.h  game.hpp  timer.hpp
include/ECS/: AssetManager.cpp  AssetManager.h  Component.h  ECS.h  Entity.h  EntityManager.h
include/ECS/Components/: Camera.h  Collider.h  CollisionBox.h  Component.h  Label.h  RigidBody.h  Sprite.h  SpriteRenderer.h  Tile.h  Transform.h  UILabel.h
include/ECS/Entity/: Entity.h  EntityManager.cpp  EntityManager.h
include/Engine/: Camera.h  Clock.cpp  Clock.h  Collider.h  Collider.hpp  Engine.cpp  Engine.h  Game.h  Global.h  KeybordManager.h  Texture.h  Tile.hpp  TileConfiguration.h  TileManager.h  vector2d.h
include/Managers/: AssetManager.cpp  AssetManager.h
include/headers/: entity.h  game.h  texture.h  tilemap.h  timer.h  vector2d.h  window.h
include/headers/ECS/: Component.h  ECS.h  Entity.h  EntityManager.cpp  EntityManager.h  Transform.h
resources/: lazy.map  props.map
resources/levels/: ground.map
resources/objects/rock/: rock.mtl
shaders/: albedo.vs  basic_mesh.vs  basic_model.fs  basic_model.vs  basic_texture.fs  basic_texture.vs  color.fs  debugging.fs  debugging.vs  directional_light.fs  gbuffer.fs  gbuffer.vs  light.vs  light_cube.fs  point_light.fs  ray.fs  ray.gs  red.fs  screen_shader.fs  screen_shader.vs  triangle.fs  triangle.vs
shaders/lighting/: debug_depth_pass.fs  debug_depth_pass.vs  depth_pass.fs  depth_pass.vs  light.vs  lighting_pass.fs  lighting_pass.vs  point_light.fs  spot_light.fs
src/: AssetManager.cpp  Camera.cpp  Clock.cpp  Engine.cpp  EntityManager.cpp  Game.cpp  KeybordManager.cpp  Texture.cpp  Tile.cpp  TileConfiguration.cpp  TileManager.cpp  entity.cpp  game.cpp  game.h  main.cpp  texture.cpp  tilemap.cpp  timer.cpp  vector2d.cpp  window.cpp
src/ECS/: ECS.h  assetmanager.cpp  assetmanager.h  component.h  entity.h  entitymanager.cpp
src/ECS/Components/: collisionbox.h  components.h  rigidbody.h  sprite.h  tile.h  transform.h  uilabel.h
src/configuration/: config.h
src/engine/: app.cpp  app.h  callbacks.cpp  callbacks.h  camera.cpp  camera.h  camera_manager.h  circle.cpp  circle.h  clock.cpp  clock.h  collider.cpp  collider.h  engine.cpp  engine.h  filesystem.h  globals.cpp  globals.h  light.h  main.cpp  mesh.h  model.h  object.h  object_vertices.h  particle.cpp  particle.h  shader.cpp  shader.h  shader_manager.cpp  shader_manager.h  stopwatch_manager.h  testing.h  texture.cpp  texture.h  tileconfiguration.cpp  tileconfiguration.h  tilemanager.cpp  tilemanager.h  utils.cpp  utils.h
src/engine/gui/: gui.h
src/engine/io/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/engine/renderer/: ImGuiLayer.h  deferred_renderer.h  framebuffer.cpp  framebuffer.h  renderer.h
src/engine/scene/: scene.h
src/util/: filesystem.hpp  log.cpp  log.h  log.hpp  stopwatch.h  stopwatch.hpp  util.h
